--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap-icons": "^1.11.3",
     "d3-geo": "^3.1.1",
     "date-fns": "^3.6.0",
+    "dompurify": "^3.2.5",
     "fortawesome": "^0.0.1-security",
     "html-react-parser": "^5.2.2",
     "install": "^0.13.0",
@@ -56,7 +57,7 @@
     "react-table": "^7.7.0",
     "react-tag-input": "^6.4.3",
     "react-timer-hook": "^3.0.7",
-    "react-toastify": "^10.0.5",
+    "react-toastify": "^10.0.6",
     "react-type-animation": "^3.2.0",
     "redux-form": "^8.3.7",
     "redux-thunk": "^2.3.0",
