--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-loading-skeleton": "^3.4.0",
     "react-masonry-css": "^1.0.14",
     "react-modal": "^3.16.1",
+    "react-pdf": "^9.2.1",
     "react-player": "^2.16.0",
     "react-quill": "^2.0.0",
     "react-redux": "^7.2.4",
