--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@react-google-maps/api": "^2.19.3",
     "@react-oauth/google": "^0.12.1",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@react-pdf/font": "^2.2.1",
     "@react-pdf/layout": "^3.6.3",
     "@react-pdf/pdfkit": "^2.1.0",
@@ -31,6 +33,7 @@
     "nanoid": "^3.1.30",
     "nodemailer": "^6.9.14",
     "path-browserify": "^1.0.1",
+    "pdfjs-dist": "^3.11.174",
     "react": "^18.3.1",
     "react-animated-slider": "^1.1.4",
     "react-beautiful-dnd": "^13.1.1",
