--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "fortawesome": "^0.0.1-security",
     "html-react-parser": "^5.2.5",
     "install": "^0.13.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.441.0",
     "moment": "^2.30.1",
     "nanoid": "^3.1.30",
